# salon

./: pre_git.sh
db/: copy.backup
db/sql/: ba
db/sql/create/: 1.backup  card.sql  client.sql  client_card.sql  client_service.sql  coach.sql  email.sql  group.sql  hall.sql  private_group.sql  service.sql  shedule.sql  vid.sql  visit.sql
docs/: ТЗ.docx
src/: CMakeLists.txt  app.cmake  client_service_item.cpp  client_service_item.h  cmake_config.h.in  login_dialog.cpp  login_dialog.h  main.cpp  variables.h
src/config/: birthday  config.cmake  config.cpp  config.h  salon.ini
src/db/: db.cmake  db_service.cpp  db_service.h  dbconnection.cpp  dbconnection.h  ping.cpp  ping.h
src/gui/: animation_list_view.cpp  animation_list_view.h  background_animation.cpp  background_animation.h  buy_dialog.cpp  buy_dialog.h  calendar_dialog.cpp  calendar_dialog.h  calendar_widget.cpp  calendar_widget.h  card_widget.cpp  card_widget.h  client_info_panel.cpp  client_info_panel.h  client_list_view.cpp  client_panel.cpp  client_panel.h  client_search_widget.cpp  client_search_widget.h  client_widget.cpp  client_widget.h  coach_widget.cpp  coach_widget.h  gui.cmake  hall_widget.cpp  hall_widget.h  item_list_view.cpp  item_list_view.h  item_list_widget.cpp  item_list_widget.h  item_widget.cpp  item_widget.h  new_card_dialog.cpp  new_card_dialog.h  new_client_dialog.cpp  new_client_dialog.h  new_coach_dialog.cpp  new_coach_dialog.h  new_hall_dialog.cpp  new_hall_dialog.h  (+18 more)
src/model/: card_fetcher.cpp  card_fetcher.h  card_item.cpp  card_item.h  card_model.cpp  card_model.h  client_fetcher.cpp  client_fetcher.h  client_item.cpp  client_item.h  client_model.cpp  client_model.h  client_proxy_model.h  client_service_item.cpp  client_service_item.h  coach_fetcher.cpp  coach_fetcher.h  coach_item.cpp  coach_item.h  coach_model.cpp  coach_model.h  cs_fetcher.cpp  cs_fetcher.h  cs_model.cpp  cs_model.h  fetcher.cpp  fetcher.h  group_fetcher.cpp  group_fetcher.h  group_item.cpp  group_item.h  group_model.cpp  group_model.h  hall_fetcher.cpp  hall_fetcher.h  hall_item.cpp  hall_item.h  hall_model.cpp  hall_model.h  igroup_item.h  (+35 more)
src/report/: client_report.cpp  client_report.h  coach_report.cpp  coach_report.h  ireport.h  report.cmake  report_dialog.cpp  report_dialog.h  report_engine.cpp  report_engine.h  reports_dialog.cpp  reports_dialog.h
src/smtp/: Makefile
src/smtp/demos/build-demo1-Desktop-Debug/: Makefile  demo1
src/smtp/demos/demo1/: Makefile  demo1  demo1.cpp  demo1.pro
src/smtp/src/: mimemessage.cpp  smtp.cmake  smtpclient.cpp
src/smtp_client/: email_sender.cpp  email_sender.h  smtp_client.cmake  statistic_email_sender.cpp  statistic_email_sender.h
